--- a/operating_system/《现代操作系统》.md
+++ b/operating_system/《现代操作系统》.md
@@ -1,7 +1,5 @@
 # 《现代操作系统》
 
-## 引论
-
 ------
 
 ### 操作系统在一台电脑中在哪个层次上工作？
@@ -48,7 +46,7 @@
 
 我的电脑是Windows系统，然而我又想体验一下Linux系统，并且我不想安装双系统，这时我会考虑**虚拟机管理程序**，比如VMWare Workstation，并且在虚拟机管理程序上安装Linux。 注意在这个情景下，虚拟机管理程序本质是一个软件，但是它为安装在它身上的Linux提供了一种“幻象”，模拟了整套硬件，让Linux认为它直接在与硬件做交互。
 
-## 进程与线程
+### 进程与线程？
 
 ------
 
